Add recipe details to cinnamon-roll.html

--- a/recipes/crepe-cake.html
+++ b/recipes/crepe-cake.html
@@ -10,6 +10,7 @@
 
         <h2>Description</h2>
         <p>Light and fluffy chocolate cream sandwiched between layers of paper thin chocolate crepes, topped with a swirl of rich chocolate ganache and a dusting of cocoa powder. This chocolate crepe cake or mille crepe requires no baking and creates a delicious and stunning cake.</p>
+        <a href="https://zhangcatherine.com/chocolate-crepe-cake/" target="_blank" rel="noopener norefferer">Recipe from zhangcatherine.com</a>
 
         <h2>Ingredients</h2>
 
