--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+
+        <ul>
+            <li><a href="recipes/crepe-cake.html">Chocolate Crepe Cake</a></li>
+            <li><a href="recipes/cinnamon-roll.html">Strawberry Cinnamon Roll</a></li>
+            <li><a href="recipes/cheesecake.html">Strawberry Cheesecake</a></li>
+        </ul>
     </body>
 </html>
